--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="button.css">
   </head>
   <body>
-    <a href="index.html" target="_blank">Metrics</a>
+    <a href="http://localhost:5501/index.html" target="_blank">Metrics</a>
   </body>
 </html>
